--- a/css/unscramble.css
+++ b/css/unscramble.css
@@ -1,3 +1,23 @@
 #random-generate-btn {
     background: var(--primary-color);
+}
+
+/* Center align Layout Format and Spacing Between Questions */
+.options .option-group:nth-child(2),
+.options .option-group:nth-child(3) {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.options .option-group:nth-child(2) h2,
+.options .option-group:nth-child(3) h2 {
+    text-align: center;
+    width: 100%;
+}
+
+.options .option-group:nth-child(2) .case-options,
+.options .option-group:nth-child(3) .case-options {
+    justify-content: center;
 } 
